# PersonalMem

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
resources/: build-mac-ax-helper.sh  build-mac-ax-watcher.sh  build-mac-frontcap.sh  build-mac-vision-ocr.sh  mac-ax-helper  mac-ax-helper.swift  mac-ax-watcher  mac-ax-watcher.swift  mac-frontcap  mac-frontcap.swift  mac-vision-ocr  mac-vision-ocr.swift
src/personalmem/: auth.py  cli.py  config.py  daemon.py  logger.py  onboard.py  paths.py  qa.py  setup_wizard.py  ui.py
src/personalmem/ax/: pruner.py
src/personalmem/capture/: __init__.py  ax_capture.py  ax_models.py  ax_pruner.py  event_dispatcher.py  s1_parser.py  scheduler.py  screenshot.py  vision_ocr.py  watcher.py  window_meta.py
src/personalmem/llm/: __init__.py  anthropic_oauth.py  codex_oauth.py
src/personalmem/pipeline/: router.py  summarizer.py
src/personalmem/prompts/: qa_answer.md  router.md  summarizer.md
src/personalmem/store/: fts.py  threads.py
