[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personalmem"
version = "0.1.0"
description = "Topic-thread routing + summarization on top of OpenChronicle's AX captures"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.50",     # ollama / openai routing path; not strictly required for OAuth path
]

[project.scripts]
personalmem = "personalmem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"personalmem.prompts" = ["*.md"]
