[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personalmem"
version = "0.1.0"
description = "Topic-thread routing + summarization on top of OpenChronicle's AX captures"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.50",                  # LLM dispatch (ollama / openai / anthropic / gemini / etc)
    "mss>=9.0",                       # screenshot grabbing (multi-monitor aware)
    "Pillow>=10.0",                   # JPEG encoding for screenshots
    "pyobjc-framework-Quartz>=10.0",  # window bounds via CGWindowListCopyWindowInfo (macOS only)
]

[project.scripts]
personalmem = "personalmem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"personalmem.prompts" = ["*.md"]
